# will-it-spread

./: dev.py  program.prof  pyproject.toml  run_simulation.py  run_simulation_graph.py
classes/: hospital.py  human.py  simulation.py  world.py
utils/: globals.py  randomizer.py
