[tool.poetry]
name = "willitspread"
version = "0.1.0"
description = ""
authors = ["Stegmeyer, Samuel <samuel.stegmeyer@accenture.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
matplotlib = "^3.2"
seaborn = "^0.10.0"
pandas = "^1.0"
pyglet = "^1.5"

[tool.black]
line-length = 140
skip-string-normalization = true
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry.dev-dependencies]
black = { version = "*", allows-prereleases = true }
snakeviz = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
